feature: nav to homepage

--- a/upload-endpoint/src/public/index.html
+++ b/upload-endpoint/src/public/index.html
@@ -5,12 +5,12 @@
     <title>rust-file-upload-endpoint</title>
   </head>
   <body>
-    
     <form method="POST" enctype="multipart/form-data">
       <input type="file" name="fileupload" required />
       <button type="submit">Upload File</button>
     </form>
   </body>
+  <nav>
+    <a href="/welcome">go back to the welcome page</a>
+  </nav>
 </html>
-
-
