feat: multiples file uploading

--- a/upload-endpoint/src/public/index.html
+++ b/upload-endpoint/src/public/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <form method="POST" enctype="multipart/form-data">
-      <input type="file" name="fileupload" required />
+      <input type="file" name="fileupload"   multiple />
       <button type="submit">Upload File</button>
     </form>
   </body>
   <nav>
-    <a href="/welcome">go back to the welcome page</a>
+    <a href="/">Home</a>
   </nav>
 </html>
